--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ show_sidebar: false        # show a sidebar instead of the usual header
 
 navigation:
   - {title: "CV", url: "/katie.pdf", icon: home}
-  - {title: "Lab", url: "https://childlanglab.com"}
+  #- {title: "Lab", url: "https://childlanglab.com"}
   - {title: "Blog", file: "blog.md"}
 
 external:                  # see http://fontawesome.com/icons
